[gd_scene load_steps=6 format=2]

[ext_resource path="res://Actors/Map/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://UI/UnitPortrait/UnitPortrait.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Ability/AbilityButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Camera2D.gd" type="Script" id=5]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 5 )

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="UnitPortrait" parent="UI" instance=ExtResource( 3 )]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -72.0
margin_bottom = 0.0

[node name="AbilityButton" parent="UI" instance=ExtResource( 4 )]
visible = false
[connection signal="unit_deselected" from="Map" to="." method="_on_Map_unit_deselected"]
[connection signal="unit_selected" from="Map" to="." method="_on_Map_unit_selected"]
[connection signal="pressed" from="UI/AbilityButton" to="Map" method="_on_AbilityButton_pressed"]
